tests/parse_print/random_perturb/set01/change-09/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/set01/change-09/change-09.essence:1:10:
language name has to be Essence, but given: xssence
    language xssence 1.3
          ^^^^^^^